--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
+    "prismjs": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^8.0.4",
+    "react-simple-code-editor": "^0.14.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
